# spacecat

./: .gitignore  CLAUDE.md  Cargo.toml  DISCORD_BOT_PLAN.md  DISCORD_WEBHOOK.md  LICENSE  README.md  WINDOWS_SERVICE.md  config.example.json  config.json  example_equipment_mount_info.json  example_event-history.json  example_event-history_2.json  example_image-history.json  example_last_af.json  example_last_af_2.json  example_sequence.json  example_sequence_2.json  example_sequence_3.json  rust-toolchain.toml
.cargo/: audit.toml
.github/: RELEASE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rpm.yml
examples/: discord_webhook.rs
installer/: .gitignore  README.md  build-msi.bat  build-msi.ps1  spacecat.wxs
packaging/: Makefile  README.md  build-rpm.sh
packaging/config/: spacecat.conf
packaging/rpm/: README.md  build-in-podman.sh  spacecat-default.json  spacecat.spec
packaging/rpm/systemd/: spacecat.conf  spacecat.service  spacecat.sysusers
packaging/systemd/: spacecat.service
scripts/: make-rpm-sources.sh
src/: api.rs  autofocus.rs  chat_updater.rs  config.rs  discord.rs  discord_updater.rs  dual_poller.rs  error.rs  events.rs  filterwheel.rs  focuser.rs  guider.rs  images.rs  lib.rs  main.rs  mount.rs  poller.rs  rotator.rs  sequence.rs  serde_helpers.rs  service_wrapper.rs  windows_service.rs
src/chat/: discord_bot.rs  discord_service.rs  matrix_service.rs  mod.rs  status_state.rs
tests/: cli_integration_tests.rs  windows_service_tests.rs
