[package]
name = "spacecat"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["SpaceCat Contributors"]
description = "SpaceCat - Astronomical Observation System for telescope automation and monitoring"
repository = "https://github.com/theatrus/spacecat"
keywords = ["astronomy", "telescope", "automation", "spacecat"]
categories = ["science", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Windows service dependencies (Windows only)
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winapi = { version = "0.3", features = ["winsvc", "winuser", "winerror"] }
