[package]
name = "spacecat"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["SpaceCat Contributors"]
description = "SpaceCat - Astronomical Observation System for telescope automation and monitoring"
repository = "https://github.com/theatrus/spacecat"
keywords = ["astronomy", "telescope", "automation", "spacecat"]
categories = ["science", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
matrix-sdk = "0.13"
url = "2.5"
async-trait = "0.1"
mime = "0.3"
thiserror = "1.0"
# SQLite bundled to avoid libsqlite3 dependency issues on Windows CI/releases
libsqlite3-sys = { version = "0.33", features = ["bundled"] }

# Windows service dependencies (Windows only)
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winapi = { version = "0.3", features = ["winsvc", "winuser", "winerror"] }
