[package]
name = "spacecat"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
authors = ["SpaceCat Contributors"]
description = "SpaceCat - Astronomical Observation System for telescope automation and monitoring"
repository = "https://github.com/theatrus/spacecat"
keywords = ["astronomy", "telescope", "automation", "spacecat"]
categories = ["science", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "multipart", "query"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
matrix-sdk = { version = "0.18", features = ["markdown"] }
url = "2.5"
async-trait = "0.1"
mime = "0.3"
thiserror = "2.0"
# Discord bot stack. Note: serenity 0.12 pins tokio-tungstenite 0.21
# → rustls 0.22 → an old rustls-webpki line. The associated RUSTSEC
# advisories (-0049/-0098/-0099/-0104) are ignored in `.cargo/audit.toml`
# until serenity ships against a newer tokio-tungstenite. The HTTP path
# (reqwest 0.13 / matrix-sdk / our NINA client) uses modern rustls 0.23.
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "http", "builder", "utils"] }
poise = "0.6"
# SQLite bundled to avoid libsqlite3 dependency issues on Windows CI/releases
libsqlite3-sys = { version = "0", features = ["bundled"] }

# Windows service dependencies (Windows only)
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winapi = { version = "0.3", features = ["winsvc", "winuser", "winerror"] }
